<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Android Testbed</string>
    <string name="activityMain">Activity Main</string>
    <string name="mainTitle">Main Activity</string>
    <string name="activityLinearLayout">Activity LinearLayout</string>
    <string name="activity1Title">Activity 1</string>
    <string name="linearLayout">LinearLayout</string>
    <string name="checkboxCaption">Check Me!</string>
    <string name="checked">I\'m Checked!</string>
    <string name="unchecked">I\'m Unchecked!</string>
    <string name="whatsYourName">What\'s Your Name ?</string>
    <string name="enterYourNameHere">Enter Your Name Here</string>
    <string name="submitName">Submit Name</string>
    <string name="activityRelativeLayout">Activity RelativeLayout</string>
    <string name="activity2Title">Activity 2</string>
    <string name="relativeLayout">RelativeLayout</string>
    <string name="enterWhateverHere">Enter whatever here (but numbers\nonly LOL).</string>
    <string name="switchButton">Switch Me</string>
    <string name="switched_off">Switched Off</string>
    <string name="switched_on">Switched On</string>
    <string name="activityTableLayout">Activity TableLayout</string>
    <string name="activity3Title">Activity 3</string>
    <string name="tableLayout">TableLayout</string>
    <string name="toggleButtonOff">I\'m Off</string>
    <string name="toggleButtonOn">I\'m On</string>
    <string name="activityRadioGroup">Activity RadioGroup</string>
    <string name="activity4Title">Activity 4</string>
    <string name="radioGroup">RadioGroup</string>
    <string name="radio0">Radio 0</string>
    <string name="radio1">Radio 1</string>
    <string name="radio2">Radio 2</string>
    <string name="activityScrollView">Activity ScrollView</string>
    <string name="activity5Title">Activity 5</string>
    <string name="_000000">#000000</string>
    <string name="_0000ff">#0000FF</string>
    <string name="_00ff00">#00FF00</string>
    <string name="_00ffff">#00FFFF</string>
    <string name="ff0000">#FF0000</string>
    <string name="ff00ff">#FF00FF</string>
    <string name="ffff00">#FFFF00</string>
    <string name="ffffff">#FFFFFF</string>
    <string name="activityListView">Activity ListView</string>
    <string name="activity6Title">Activity 6</string>
    <string name="listView">ListView</string>
    <string name="activityListViewMultipleChoice">Activity ListView (Multiple Choice)</string>
    <string name="activity7Title">Activity 7</string>
    <string name="listViewMultipleChoice">ListView (Multiple Choices)</string>
    <string name="youSelected">"You selected: "</string>
    <string name="activitySpinner">Activity Spinner</string>
    <string name="spinner_selection">Spinner Selection</string>
    <string name="activityGridView">Activity GridView</string>
    <string name="activityAdapterCustomized">Activty AdapterCustomized</string>
    <string name="activityAutoCompleteTextView">Activity AutoCompleteTextView</string>
    <string name="autocompletetextview">AutoCompleteTextView</string>
    <string name="activityListViewCustomized">Activity ListViewCustomized</string>
    <string name="icon">icon</string>
    <string name="sizeTemplate">Size: %d</string>
    <string name="activityWebView0">Activity WebView 0</string>
    <string name="activityWebView1">Activity WebView 1</string>
    <string name="activityWebView2">Activity WebView 2</string>
    <string name="activityWebView3">Activity WebView 3</string>
    <!--<string name = "size">Size</string>-->
    <!--<string name = "toastContent">Hello, %s</string>-->
    <string name="activityConstraintLayout0">Activity Constraint Layout 0</string>
    <string name="buttonConstraintLayout00">Tap Me</string>
    <string name="buttonConstraintLayout01">Don\'t Tap Me!</string>
    <string name="activityConstraintLayout1">Activity Constraint Layout 1</string>
    <string name="activityConstraintLayout2">Activty Constraint Layout 2</string>
    <string name="url">URL</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="fiftyPerCent">Fifty</string>
    <string name="thirtyPerCent">Thirty</string>
    <string name="twentyPerCent">Twenty</string>
    <string name="activityRecyclerView0">Activity RecyclerView 0</string>
    <string name="youClicked">You clicked number: %d</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="about">About …</string>
    <string name="aboutToast">© Punit Arya</string>
    <string name="home" tools:ignore="Typos">Wanna go home ?</string>
    <string name="activityActionBar">Activity ActionBar</string>
    <string name="actionButton0">ActionButton0</string>
    <!--	<string name = "title_activity_u_r_i_launch">URILaunch</string>-->
    <!--	&lt;!&ndash; Strings used for fragments for navigation &ndash;&gt;-->
    <!--	<string name = "first_fragment_label">First Fragment</string>-->
    <!--	<string name = "second_fragment_label">Second Fragment</string>-->
    <!--	<string name = "next">Next</string>-->
    <!--	<string name = "previous">Previous</string>-->
    <!--	<string name = "hello_first_fragment">Hello first fragment</string>-->
    <!--	<string name = "hello_second_fragment">Hello second fragment. Arg: %1$s</string>-->
    <string name="show_me">Show Me</string>
    <string name="activityLaunchURI">Activity Launch URI</string>
    <string name="activityIntentExtras">Activity Intent Extras</string>
    <string name="fromAnotherActivity">From Main Activity With Love!</string>
    <string name="lifecycleLoggingTitle">Lifecycle Logging</string>
    <string name="lifecycleLoggingContent">Content</string>
    <string name="lifecycleLogging">Activity Lifecycle Logging</string>
    <string name="fragment_2">Fragment 2!</string>
    <string name="fragment1_1">Fragment 1!</string>
    <string name="fragment1">Fragment Static</string>
</resources>
