<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android = "http://schemas.android.com/apk/res/android"
	xmlns:tools = "http://schemas.android.com/tools"
	android:background = "@color/background"
	android:layout_height = "match_parent"
	android:layout_width = "match_parent"
	android:orientation = "vertical"
	tools:context = ".ActivityLinearLayout"
	>
	<TextView
		android:id = "@+id/title"
		android:layout_height = "wrap_content"
		android:layout_width = "wrap_content"
		android:text = "@string/activity1Title"
		android:textSize = "@dimen/title"
		/>
	<TextView
		android:id = "@+id/relativeLayout"
		android:layout_height = "wrap_content"
		android:layout_width = "wrap_content"
		android:text = "@string/linearLayout"
		android:textSize = "@dimen/subheading"
		/>
	<CheckBox
		android:id = "@+id/checkbox"
		android:layout_height = "wrap_content"
		android:layout_width = "wrap_content"
		android:text = "@string/checkboxCaption"
		/>
</LinearLayout>
