<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android = "http://schemas.android.com/apk/res/android"
	xmlns:tools = "http://schemas.android.com/tools"
	xmlns:app = "http://schemas.android.com/apk/res-auto"
	android:layout_height = "match_parent"
	android:layout_width = "match_parent"
	tools:context = ".ActivityConstraintLayout2"
	>
	<Button
		android:id = "@+id/fiftyPerCent"
		android:layout_height = "0dp"
		android:layout_width = "0dp"
		android:text = "@string/fiftyPerCent"
		app:layout_constraintEnd_toEndOf = "parent"
		app:layout_constraintHeight_percent = "0.50"
		app:layout_constraintStart_toStartOf = "parent"
		app:layout_constraintTop_toTopOf = "parent"
		/>
	<Button
		android:id = "@+id/thirtyPerCent"
		android:layout_height = "0dp"
		android:layout_width = "0dp"
		android:text = "@string/thirtyPerCent"
		app:layout_constraintEnd_toEndOf = "parent"
		app:layout_constraintHeight_percent = "0.30"
		app:layout_constraintStart_toStartOf = "parent"
		app:layout_constraintTop_toBottomOf = "@+id/fiftyPerCent"
		/>
	<Button
		android:layout_height = "0dp"
		android:layout_width = "0dp"
		android:text = "@string/twentyPerCent"
		app:layout_constraintBottom_toBottomOf = "parent"
		app:layout_constraintEnd_toEndOf = "parent"
		app:layout_constraintStart_toStartOf = "parent"
		app:layout_constraintTop_toBottomOf = "@+id/thirtyPerCent"
		/>
</android.support.constraint.ConstraintLayout>
