<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android = "http://schemas.android.com/apk/res/android"
	android:layout_height = "match_parent"
	android:layout_width = "match_parent"
	android:orientation = "vertical"
	>
	<TextView
		android:layout_gravity = "center_horizontal"
		android:layout_height = "wrap_content"
		android:layout_width = "wrap_content"
		android:text = "@string/activity7Title"
		android:textSize = "@dimen/title"
		/>
	<TextView
		android:layout_gravity = "center_horizontal"
		android:layout_height = "wrap_content"
		android:layout_width = "wrap_content"
		android:text = "@string/listViewMultipleChoice"
		android:textSize = "@dimen/subheading"
		/>
	<LinearLayout
		android:layout_height = "wrap_content"
		android:layout_width = "match_parent"
		android:orientation = "horizontal"
		>
		<TextView
			android:layout_height = "wrap_content"
			android:layout_width = "wrap_content"
			android:text = "@string/youSelected"
			/>
		<TextView
			android:id = "@+id/textView"
			android:layout_height = "wrap_content"
			android:layout_width = "match_parent"
			/>
	</LinearLayout>
	<ListView
		xmlns:android = "http://schemas.android.com/apk/res/android"
		xmlns:tools = "http://schemas.android.com/tools"
		android:choiceMode = "multipleChoice"
		android:drawSelectorOnTop = "false"
		android:id = "@android:id/list"
		android:layout_height = "match_parent"
		android:layout_width = "match_parent"
		android:scrollbarStyle = "outsideOverlay"
		tools:context = ".ActivityListViewMultipleChoice"
		/>
</LinearLayout>
